--- a/styles/style.css
+++ b/styles/style.css
@@ -227,6 +227,17 @@ a:hover, a:focus {
   -webkit-transition: all 0.6s ease;
   transition: all 0.6s ease;
 }
+.space-by-left{
+  padding-left: 50px;
+}
+.contnt{
+  width: 90%;
+  text-align: justify;
+  margin: auto;
+}
+.contnt p{
+  margin-top: 30px;
+}
 
 .btn-primary:not(:disabled):not(.disabled).active:focus, .btn-primary:not(:disabled):not(.disabled):active:focus, .show > .btn-primary.dropdown-toggle:focus {
   color: #ff2c9c;
