--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -4,6 +4,16 @@
     font-size: 80px !important;
   }
 
+  .grd{
+    display: block;
+     padding: 10px;
+    width: 90%;
+    margin: auto;
+  }
+  
+  .grd div{
+    border: none !important;
+  }
   .banner-title span{
     margin-bottom: 20px;
   }
@@ -1188,6 +1198,19 @@
 
 /* Min width 768px to Max width 991px */
 @media only screen and (min-width: 768px) and (max-width: 991px) {
+  .grd{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 10px 10px;
+    width: 95%;
+    margin: auto;
+  }
+  
+  .grd div{
+    border: none !important;
+  }
+  
+  
   .pl-20 {
     padding-left: 0;
   }
